Gnome: Fix unreadable text in calendar events

--- a/gtk-3.0/apps/_gnome.scss
+++ b/gtk-3.0/apps/_gnome.scss
@@ -152,3 +152,17 @@
   background: transparent;
   border: none;
 }
+
+/*******************
+ * Calendar events *
+********************/
+.color-light {
+  &.timed label {
+    color: $fg_color;
+    opacity: 1;
+  }
+  .week-view &.timed label, & label, .year-view &:not(.timed) label  {
+    color: $fg_color;
+    opacity: 1;
+  }
+}
