--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -5500,6 +5500,16 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   background: transparent;
   border: none; }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label {
+  color: #d8dee9;
+  opacity: 1; }
+.week-view .color-light.timed label, .color-light label, .year-view .color-light:not(.timed) label {
+  color: #d8dee9;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
